[gd_scene load_steps=5 format=3 uid="uid://card3d_demo_scene"]

[ext_resource type="Script" path="res://scripts/card_3d_demo.gd" id="1_demo_script"]
[ext_resource type="PackedScene" uid="uid://dxpc2iac0hjpw" path="res://addons/card_3d/scenes/card_3d.tscn" id="2_card_scene"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="3_collection_scene"]
[ext_resource type="Script" path="res://addons/card_3d/scripts/drag_controller.gd" id="4_drag_script"]

[node name="Card3DDemo" type="Node3D"]
script = ExtResource("1_demo_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 8, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 5)
shadow_enabled = true

[node name="DragController" type="Node3D" parent="."]
script = ExtResource("4_drag_script")

[node name="PlayerHand" parent="DragController" instance=ExtResource("3_collection_scene")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="PlayArea" parent="DragController" instance=ExtResource("3_collection_scene")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
